--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -161,7 +161,7 @@ label:has(+ :is(button, input, select, textarea)) {
   margin-bottom: var(--spacing-05);
   color: var(--fg3);
 
-  &+* {
+  & + * {
     margin-bottom: var(--spacing);
     display: block;
   }
@@ -248,8 +248,10 @@ button:not(.link) {
 
 /* Inputs */
 
-:is(input:not([type]),
-  input:is([type='text'],
+:is(
+  input:not([type]),
+  input:is(
+    [type='text'],
     [type='password'],
     [type='email'],
     [type='number'],
@@ -258,9 +260,11 @@ button:not(.link) {
     [type='search'],
     [type='date'],
     [type='file'],
-    [type='color']),
+    [type='color']
+  ),
   select,
-  textarea) {
+  textarea
+) {
   max-width: 100%;
   padding: var(--spacing) var(--spacing-2);
   border: var(--border-width) solid var(--border-color);
@@ -292,11 +296,11 @@ textarea {
   field-sizing: content;
 }
 
-:is(input, button, select, a)+ :is(input, button, select, a) {
+:is(input, button, select, a) + :is(input, button, select, a) {
   margin-left: var(--spacing);
 }
 
-:is(button, select)~a {
+:is(button, select) ~ a {
   padding: var(--spacing);
 }
 
@@ -332,7 +336,6 @@ button.link {
   }
 }
 
-
 /* Error */
 
 .error-message {
@@ -347,7 +350,7 @@ button.link {
 }
 
 /* Spacing when message adjacent */
-:is(button, input, select)+ :is(.message, .error-message) {
+:is(button, input, select) + :is(.message, .error-message) {
   margin-left: var(--spacing);
 }
 
@@ -519,7 +522,7 @@ dialog {
     background-color: rgba(0, 0, 0, 0.5);
   }
 
-  [method="dialog"] {
+  [method='dialog'] {
     float: right;
     margin: calc(-1 * var(--spacing));
 
@@ -532,7 +535,6 @@ dialog {
     }
   }
 }
-
 
 /* Animations */
 
