fallback menu position

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -161,7 +161,7 @@ label:has(+ :is(button, input, select, textarea)) {
   margin-bottom: var(--spacing-05);
   color: var(--fg3);
 
-  & + * {
+  &+* {
     margin-bottom: var(--spacing);
     display: block;
   }
@@ -248,10 +248,8 @@ button:not(.link) {
 
 /* Inputs */
 
-:is(
-  input:not([type]),
-  input:is(
-    [type='text'],
+:is(input:not([type]),
+  input:is([type='text'],
     [type='password'],
     [type='email'],
     [type='number'],
@@ -260,11 +258,9 @@ button:not(.link) {
     [type='search'],
     [type='date'],
     [type='file'],
-    [type='color']
-  ),
+    [type='color']),
   select,
-  textarea
-) {
+  textarea) {
   max-width: 100%;
   padding: var(--spacing) var(--spacing-2);
   border: var(--border-width) solid var(--border-color);
@@ -296,11 +292,11 @@ textarea {
   field-sizing: content;
 }
 
-:is(input, button, select, a) + :is(input, button, select, a) {
+:is(input, button, select, a)+ :is(input, button, select, a) {
   margin-left: var(--spacing);
 }
 
-:is(button, select) ~ a {
+:is(button, select)~a {
   padding: var(--spacing);
 }
 
@@ -350,7 +346,7 @@ button.link {
 }
 
 /* Spacing when message adjacent */
-:is(button, input, select) + :is(.message, .error-message) {
+:is(button, input, select)+ :is(.message, .error-message) {
   margin-left: var(--spacing);
 }
 
@@ -457,6 +453,10 @@ pre {
   border: var(--border-width) solid var(--border-color);
   margin-top: var(--spacing-05);
   width: 150px;
+
+  position: absolute;
+  top: 45px;
+  left: calc(100% - 170px);
 
   ul {
     padding: 0;
