--- a/static/css/components.css
+++ b/static/css/components.css
@@ -106,6 +106,7 @@
 /* Button to show banner after its been closed */
 .banner-closed-button {
   position: absolute;
+  z-index: 100;
   top: 63px;
   right: var(--spacing);
   float: right;
