--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,59 +4,6 @@
   --content-width: 880px;
 }
 
-/* Page Transitions */
-
-@view-transition {
-  navigation: auto;
-}
-
-main {
-  view-transition-name: page;
-}
-
-::view-transition-group(page) {
-  animation-duration: 1s;
-}
-
-::view-transition-old(page) {
-  animation: 0.5s ease-in both move-out;
-}
-
-::view-transition-new(page) {
-  animation: 0.5s ease-in both move-in;
-}
-
-@keyframes move-out {
-  from {
-    /* transform: translateY(0%); */
-  }
-
-  50% {
-    opacity: 0;
-    /* transform: translateY(-100%); */
-  }
-
-  to {
-    opacity: 0;
-  }
-}
-
-@keyframes move-in {
-  from {
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 0;
-    /* transform: translateY(100%); */
-  }
-
-  to {
-    opacity: 1;
-    /* transform: translateY(0%); */
-  }
-}
-
 /* Page */
 
 .scrollable {
@@ -77,6 +24,7 @@ main {
   padding: var(--spacing-2) var(--spacing);
   max-width: var(--content-width);
 
+  /* Full width if contains chat box */
   &:has(.chat-box) {
     padding-top: 0;
     padding-bottom: 0;
