--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -554,3 +554,63 @@ dialog {
     opacity: 1;
   }
 }
+
+
+
+
+
+
+
+
+/* Page Transitions */
+
+@view-transition {
+  navigation: auto;
+}
+
+main {
+  view-transition-name: page;
+}
+
+::view-transition-group(page) {
+  animation-duration: 1s;
+}
+
+::view-transition-old(page) {
+  animation: 0.5s ease-in both move-out;
+}
+
+::view-transition-new(page) {
+  animation: 0.5s ease-in both move-in;
+}
+
+@keyframes move-out {
+  from {
+    /* transform: translateY(0%); */
+  }
+
+  50% {
+    opacity: 0;
+    /* transform: translateY(-100%); */
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes move-in {
+  from {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0;
+    /* transform: translateY(100%); */
+  }
+
+  to {
+    opacity: 1;
+    /* transform: translateY(0%); */
+  }
+}
