--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -162,7 +162,7 @@ label:has(+ :is(button, input, select, textarea)) {
   margin-bottom: var(--spacing-05);
   color: var(--fg3);
 
-  &+* {
+  & + * {
     margin-bottom: var(--spacing);
     display: block;
   }
@@ -249,8 +249,10 @@ button:not(.link) {
 
 /* Inputs */
 
-:is(input:not([type]),
-  input:is([type='text'],
+:is(
+  input:not([type]),
+  input:is(
+    [type='text'],
     [type='password'],
     [type='email'],
     [type='number'],
@@ -259,9 +261,11 @@ button:not(.link) {
     [type='search'],
     [type='date'],
     [type='file'],
-    [type='color']),
+    [type='color']
+  ),
   select,
-  textarea) {
+  textarea
+) {
   max-width: 100%;
   padding: var(--spacing) var(--spacing-2);
   border: var(--border-width) solid var(--border-color);
@@ -293,11 +297,11 @@ textarea {
   field-sizing: content;
 }
 
-:is(input, button, select, a)+ :is(input, button, select, a) {
+:is(input, button, select, a) + :is(input, button, select, a) {
   margin-left: var(--spacing);
 }
 
-:is(button, select)~a {
+:is(button, select) ~ a {
   padding: var(--spacing);
 }
 
@@ -347,7 +351,7 @@ button.link {
 }
 
 /* Spacing when message adjacent */
-:is(button, input, select)+ :is(.message, .error-message) {
+:is(button, input, select) + :is(.message, .error-message) {
   margin-left: var(--spacing);
 }
 
@@ -554,13 +558,6 @@ dialog {
     opacity: 1;
   }
 }
-
-
-
-
-
-
-
 
 /* Page Transitions */
 
