--- a/static/css/components.css
+++ b/static/css/components.css
@@ -41,12 +41,20 @@
       clear: both;
 
       &[data-role='user'] {
+        min-width: 150px;
         max-width: 90%;
         float: right;
-        background-color: var(--primary);
-        color: var(--on-primary);
-        padding: var(--spacing);
+        background-color: var(--bg2);
+        color: var(--fg1);
+        box-shadow: var(--field-shadow);
+        padding: var(--spacing) var(--spacing-2);
         border-radius: var(--radius);
+      }
+
+      &[data-role="assistant"]+&[data-role="assistant"] {
+        border-top: var(--border-width) solid var(--bg3);
+        margin-top: var(--spacing-2);
+        padding-top: var(--spacing-2);
       }
 
       pre {
