--- a/static/css/components.css
+++ b/static/css/components.css
@@ -51,7 +51,7 @@
         border-radius: var(--radius);
       }
 
-      &[data-role="assistant"]+&[data-role="assistant"] {
+      &[data-role='assistant'] + &[data-role='assistant'] {
         border-top: var(--border-width) solid var(--bg3);
         margin-top: var(--spacing-2);
         padding-top: var(--spacing-2);
