--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -161,7 +161,7 @@ label:has(+ :is(button, input, select, textarea)) {
   margin-bottom: var(--spacing-05);
   color: var(--fg3);
 
-  & + * {
+  &+* {
     margin-bottom: var(--spacing);
     display: block;
   }
@@ -207,13 +207,14 @@ button {
   transition: background-color var(--transition), box-shadow var(--transition);
 }
 
-a {
+a:not(.button) {
   transition: color var(--transition);
 }
 
 /* Buttons */
 
-button:not(.link) {
+button:not(.link),
+.button {
   --color: var(--accent);
   background-color: var(--color);
   border-radius: var(--radius);
@@ -224,6 +225,7 @@ button:not(.link) {
   font-weight: bold;
   color: var(--on-accent);
   box-shadow: var(--field-shadow);
+  text-decoration: none;
 
   &:hover:not(:disabled) {
     background-color: color-mix(in srgb, var(--color), var(--on-accent) 15%);
@@ -248,10 +250,8 @@ button:not(.link) {
 
 /* Inputs */
 
-:is(
-  input:not([type]),
-  input:is(
-    [type='text'],
+:is(input:not([type]),
+  input:is([type='text'],
     [type='password'],
     [type='email'],
     [type='number'],
@@ -260,11 +260,9 @@ button:not(.link) {
     [type='search'],
     [type='date'],
     [type='file'],
-    [type='color']
-  ),
+    [type='color']),
   select,
-  textarea
-) {
+  textarea) {
   max-width: 100%;
   padding: var(--spacing) var(--spacing-2);
   border: var(--border-width) solid var(--border-color);
@@ -296,11 +294,11 @@ textarea {
   field-sizing: content;
 }
 
-:is(input, button, select, a) + :is(input, button, select, a) {
+:is(input, button, select, a)+ :is(input, button, select, a) {
   margin-left: var(--spacing);
 }
 
-:is(button, select) ~ a {
+:is(button, select)~a {
   padding: var(--spacing);
 }
 
@@ -312,7 +310,7 @@ textarea {
 
 /* Links */
 
-a,
+a:not(.button),
 button.link {
   --color: var(--accent);
   color: var(--color);
@@ -350,7 +348,7 @@ button.link {
 }
 
 /* Spacing when message adjacent */
-:is(button, input, select) + :is(.message, .error-message) {
+:is(button, input, select)+ :is(.message, .error-message) {
   margin-left: var(--spacing);
 }
 
