edits to pricing page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -58,9 +58,15 @@ header {
   .right {
     display: flex;
     align-items: center;
+    color: var(--primary);
+    font-weight: bold;
 
     .tokens {
+      display: flex;
+      align-items: center;
       margin-right: var(--spacing);
+
+      svg {}
     }
   }
 
