--- a/static/css/components.css
+++ b/static/css/components.css
@@ -51,7 +51,7 @@
         border-radius: var(--radius);
       }
 
-      &[data-role='assistant'] + &[data-role='assistant'] {
+      &[data-role='assistant']+&[data-role='assistant'] {
         border-top: var(--border-width) solid var(--bg3);
         margin-top: var(--spacing-2);
         padding-top: var(--spacing-2);
@@ -124,5 +124,69 @@
 
   span {
     display: block;
+  }
+}
+
+
+/* Pricing Page */
+
+.pricings {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--spacing-2);
+  justify-content: center;
+  margin-top: var(--spacing-2);
+
+  .pricing {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    background-color: var(--bg2);
+    border: var(--border-width) solid var(--bg3);
+    border-radius: var(--radius-2);
+    padding: var(--spacing-2);
+
+    &.premium {
+      border: 2px solid var(--primary);
+    }
+
+    p {
+      margin: 0;
+    }
+
+    h2 {
+      margin-top: 0;
+      font-size: 2.3rem;
+    }
+
+    h2+p {
+      color: var(--fg3);
+    }
+
+    .cost {
+      font-size: 2rem;
+    }
+
+    .features {
+      margin-bottom: var(--spacing);
+
+      p {
+        display: flex;
+        align-items: center;
+        margin: var(--spacing) 0;
+
+        svg {
+          color: var(--primary);
+          margin-right: var(--spacing-05);
+        }
+      }
+
+    }
+
+    .button {
+      margin-top: auto;
+      width: 100%;
+    }
+
   }
 }
