--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -115,7 +115,8 @@ body {
     'Open Sans',
     'Helvetica Neue',
     sans-serif;
-  height: 100%;
+  height: 100dvh;
+  /* height: 100%; */
   background: var(--bg1);
   color: var(--fg2);
   overscroll-behavior: none;
@@ -161,7 +162,7 @@ label:has(+ :is(button, input, select, textarea)) {
   margin-bottom: var(--spacing-05);
   color: var(--fg3);
 
-  & + * {
+  &+* {
     margin-bottom: var(--spacing);
     display: block;
   }
@@ -254,10 +255,8 @@ button:not(.link),
 
 /* Inputs */
 
-:is(
-  input:not([type]),
-  input:is(
-    [type='text'],
+:is(input:not([type]),
+  input:is([type='text'],
     [type='password'],
     [type='email'],
     [type='number'],
@@ -266,11 +265,9 @@ button:not(.link),
     [type='search'],
     [type='date'],
     [type='file'],
-    [type='color']
-  ),
+    [type='color']),
   select,
-  textarea
-) {
+  textarea) {
   max-width: 100%;
   padding: var(--spacing) var(--spacing-2);
   border: var(--border-width) solid var(--border-color);
@@ -302,11 +299,11 @@ textarea {
   field-sizing: content;
 }
 
-:is(input, button, select, a) + :is(input, button, select, a) {
+:is(input, button, select, a)+ :is(input, button, select, a) {
   margin-left: var(--spacing);
 }
 
-:is(button, select) ~ a {
+:is(button, select)~a {
   padding: var(--spacing);
 }
 
@@ -356,7 +353,7 @@ button.link {
 }
 
 /* Spacing when message adjacent */
-:is(button, input, select) + :is(.message, .error-message) {
+:is(button, input, select)+ :is(.message, .error-message) {
   margin-left: var(--spacing);
 }
 
