--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -115,8 +115,8 @@ body {
     'Open Sans',
     'Helvetica Neue',
     sans-serif;
-  height: 100dvh;
-  /* height: 100%; */
+  height: 100%;
+  max-height: 100vh;
   background: var(--bg1);
   color: var(--fg2);
   overscroll-behavior: none;
