--- a/static/css/components.css
+++ b/static/css/components.css
@@ -24,8 +24,11 @@
     }
 
     button {
-      & span {
-        display: inline-block;
+      padding: 0;
+
+      & svg {
+        width: 1em;
+        height: 1em;
         scale: 1.5;
       }
     }
@@ -51,7 +54,7 @@
         border-radius: var(--radius);
       }
 
-      &[data-role='assistant'] + &[data-role='assistant'] {
+      &[data-role='assistant']+&[data-role='assistant'] {
         border-top: var(--border-width) solid var(--bg3);
         margin-top: var(--spacing-2);
         padding-top: var(--spacing-2);
@@ -158,7 +161,7 @@
       font-size: 2.3rem;
     }
 
-    h2 + p {
+    h2+p {
       color: var(--fg3);
     }
 
