--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -24,7 +24,7 @@
   --spacing-05: calc(var(--spacing) * 0.5);
   --spacing-2: calc(var(--spacing) * 2);
   --transition: 0.2s ease-in;
-  --field-shadow: 0 1px 4px #0002;
+  --field-shadow: 0 1px 5px #0002;
 
   --red: color-mix(in srgb, red, var(--fg1) 25%);
 
@@ -392,10 +392,9 @@ td {
 /* Images */
 
 main img {
-  display: block;
+  display: inline-block;
   max-width: 100%;
   border-radius: var(--radius-2);
-  box-shadow: var(--field-shadow);
 }
 
 /* Loader */
