--- a/static/css/components.css
+++ b/static/css/components.css
@@ -191,3 +191,80 @@
     }
   }
 }
+
+
+/* Alert */
+
+
+.alert {
+  width: 300px;
+  max-width: 100%;
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  translate: -50% 0;
+  padding: var(--spacing-2);
+  border-radius: var(--radius);
+  background-color: var(--bg2);
+  color: var(--fg1);
+  box-shadow: var(--field-shadow);
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: var(--spacing);
+  animation: slideIn 0.3s ease-out;
+  border: var(--border-width) solid var(--bg3);
+
+  &.error {
+    background-color: var(--red);
+    color: var(--on-accent);
+    border-color: transparent;
+    font-weight: 600;
+  }
+
+  .close {
+    background: none;
+    border: none;
+    color: inherit;
+    cursor: pointer;
+    padding: 0;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &[data-hide="true"] {
+    animation: slideOut 0.3s ease-out;
+    opacity: 0;
+  }
+}
+
+
+
+
+@keyframes slideIn {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideOut {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  to {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+
+}
