fixed all type errors

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -254,8 +254,10 @@ button:not(.link),
 
 /* Inputs */
 
-:is(input:not([type]),
-  input:is([type='text'],
+:is(
+  input:not([type]),
+  input:is(
+    [type='text'],
     [type='password'],
     [type='email'],
     [type='number'],
@@ -264,9 +266,11 @@ button:not(.link),
     [type='search'],
     [type='date'],
     [type='file'],
-    [type='color']),
+    [type='color']
+  ),
   select,
-  textarea) {
+  textarea
+) {
   max-width: 100%;
   padding: var(--spacing) var(--spacing-2);
   border: var(--border-width) solid var(--border-color);
@@ -302,7 +306,7 @@ textarea {
   margin-left: var(--spacing);
 } */
 
-:is(button, select)~a {
+:is(button, select) ~ a {
   padding: var(--spacing);
 }
 
@@ -617,8 +621,6 @@ main {
   }
 }
 
-
-
 /* Helpers */
 
 .spaced {
@@ -654,7 +656,7 @@ button:has(.loader-icon) {
   }
 }
 
-form[data-loading="true"] {
+form[data-loading='true'] {
   button:has(.loader-icon) {
     .loader-icon {
       display: block;
