--- a/static/css/components.css
+++ b/static/css/components.css
@@ -55,7 +55,7 @@
         border-radius: var(--radius);
       }
 
-      &[data-role='assistant']+&[data-role='assistant'] {
+      &[data-role='assistant'] + &[data-role='assistant'] {
         border-top: var(--border-width) solid var(--bg3);
         margin-top: var(--spacing-2);
         padding-top: var(--spacing-2);
@@ -162,7 +162,7 @@
       font-size: 2.3rem;
     }
 
-    h2+p {
+    h2 + p {
       color: var(--fg3);
     }
 
@@ -192,9 +192,7 @@
   }
 }
 
-
 /* Alert */
-
 
 .alert {
   width: 300px;
@@ -245,14 +243,11 @@
     justify-content: center;
   }
 
-  &[data-hide="true"] {
+  &[data-hide='true'] {
     animation: slideOut 0.3s ease-out;
     opacity: 0;
   }
 }
-
-
-
 
 @keyframes slideIn {
   from {
@@ -276,11 +271,7 @@
     transform: translateY(-100%);
     opacity: 0;
   }
-
 }
-
-
-
 
 /* Onboard section */
 
