--- a/static/css/components.css
+++ b/static/css/components.css
@@ -25,11 +25,13 @@
     }
 
     button {
+      border-radius: var(--radius) !important;
+
       padding: 0;
 
       & svg {
-        width: 1em;
-        height: 1em;
+        width: 1rem;
+        height: 1rem;
         scale: 1.5;
       }
     }
@@ -201,7 +203,7 @@
   top: 15px;
   left: 50%;
   translate: -50% 0;
-  padding: var(--spacing) var(--spacing-2);
+  padding: 0 var(--spacing-2);
   border-radius: var(--radius);
   background-color: var(--bg2);
   color: var(--fg1);
