--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -23,7 +23,7 @@
   --spacing: 8px;
   --spacing-05: calc(var(--spacing) * 0.5);
   --spacing-2: calc(var(--spacing) * 2);
-  --transition: 0.2s ease-in;
+  --transition: 0.15s ease-in;
   --field-shadow: 0 1px 5px #0002;
 
   --red: color-mix(in srgb, red, var(--fg1) 25%);
@@ -174,11 +174,6 @@ label:has(input[type='radio'], input[type='checkbox']) {
   }
 }
 
-form {
-  /* So that content not cut off for field transitions */
-  padding: var(--spacing-05);
-}
-
 /* divider */
 
 hr {
@@ -296,18 +291,10 @@ button:not(.link),
     color: var(--fg2);
     cursor: pointer;
   }
-}
 
-textarea {
-  field-sizing: content;
-}
-
-/* :is(input, button, select, a)+ :is(input, button, select, a) {
-  margin-left: var(--spacing);
-} */
-
-:is(button, select) ~ a {
-  padding: var(--spacing);
+  &:is(textarea) {
+    field-sizing: content;
+  }
 }
 
 /* Disable text selection of fields */
@@ -339,19 +326,6 @@ button.link {
     scale: 1.05;
     color: color-mix(in srgb, var(--color), currentColor 20%);
   }
-}
-
-/* Error */
-
-.error-message {
-  color: var(--red);
-  margin: var(--spacing) 0;
-  animation: fadeIn 0.5s ease-in-out;
-}
-
-.message {
-  margin: var(--spacing) 0;
-  animation: fadeIn 0.5s ease-in-out;
 }
 
 /* Tables */
@@ -472,6 +446,7 @@ pre {
       width: 100%;
       padding: var(--spacing-05) var(--spacing);
       border-radius: var(--radius);
+      transition: var(--transition) background-color;
 
       &:hover {
         background-color: var(--bg3);
@@ -643,7 +618,7 @@ a.wide {
   width: 100%;
 }
 
-button:has(.loader-icon) {
+.form-button {
   position: relative;
 
   .loader-icon {
@@ -657,7 +632,7 @@ button:has(.loader-icon) {
 }
 
 form[data-loading='true'] {
-  button:has(.loader-icon) {
+  .form-button {
     .loader-icon {
       display: block;
     }
