--- a/static/css/components.css
+++ b/static/css/components.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   border-radius: var(--radius-2);
+  align-items: center;
 
   form {
     line-height: 1;
@@ -57,7 +58,7 @@
         border-radius: var(--radius);
       }
 
-      &[data-role='assistant'] + &[data-role='assistant'] {
+      &[data-role='assistant']+&[data-role='assistant'] {
         border-top: var(--border-width) solid var(--bg3);
         margin-top: var(--spacing-2);
         padding-top: var(--spacing-2);
@@ -164,7 +165,7 @@
       font-size: 2.3rem;
     }
 
-    h2 + p {
+    h2+p {
       color: var(--fg3);
     }
 
