--- a/static/css/components.css
+++ b/static/css/components.css
@@ -104,6 +104,7 @@
     padding: 0 var(--spacing);
     position: absolute;
     right: 1rem;
+    color: var(--on-accent);
 
     &,
     &:active {
