--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -69,7 +69,7 @@
 
 * {
   touch-action: manipulation;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   scrollbar-color: var(--accent) transparent;
@@ -249,10 +249,8 @@ button:not(.link),
 
 /* Inputs */
 
-:is(
-  input:not([type]),
-  input:is(
-    [type='text'],
+:is(input:not([type]),
+  input:is([type='text'],
     [type='password'],
     [type='email'],
     [type='number'],
@@ -261,11 +259,9 @@ button:not(.link),
     [type='search'],
     [type='date'],
     [type='file'],
-    [type='color']
-  ),
+    [type='color']),
   select,
-  textarea
-) {
+  textarea) {
   max-width: 100%;
   padding: var(--spacing) var(--spacing-2);
   border: var(--border-width) solid var(--border-color);
