--- a/static/css/main.css
+++ b/static/css/main.css
@@ -79,6 +79,10 @@ header {
       display: flex;
       align-items: center;
       --color: var(--primary);
+
+      img {
+        margin-right: var(--spacing);
+      }
     }
   }
 }
