--- a/static/css/components.css
+++ b/static/css/components.css
@@ -62,7 +62,7 @@
         border-radius: var(--radius);
       }
 
-      &[data-role='assistant'] + &[data-role='assistant'] {
+      &[data-role='assistant']+&[data-role='assistant'] {
         border-top: var(--border-width) solid var(--bg3);
         margin-top: var(--spacing-2);
         padding-top: var(--spacing-2);
@@ -90,10 +90,9 @@
 .banner {
   text-align: center;
   background-color: var(--accent);
-  padding: 0.5rem;
+  padding: var(--spacing-05) var(--spacing-2);
   color: var(--on-accent);
-  width: calc(100% - 8px * 2);
-  margin: 2px 8px;
+  width: 100%;
   border-radius: var(--radius);
   margin-right: var(--spacing);
   position: relative;
@@ -170,7 +169,7 @@
       font-size: 2.3rem;
     }
 
-    h2 + p {
+    h2+p {
       color: var(--fg3);
     }
 
