--- a/static/css/theme/theme.css
+++ b/static/css/theme/theme.css
@@ -1,5 +1,5 @@
-@import "vars.css";
-@import "base.css";
-@import "elements.css";
-@import "fields.css";
-@import "page-transitions.css";
+@import 'vars.css';
+@import 'base.css';
+@import 'elements.css';
+@import 'fields.css';
+@import 'page-transitions.css';
