enable text selection of links

--- a/static/css/theme/fields.css
+++ b/static/css/theme/fields.css
@@ -82,10 +82,8 @@ button:not(.link),
 
 /* Inputs */
 
-:is(
-  input:not([type]),
-  input:is(
-    [type='text'],
+:is(input:not([type]),
+  input:is([type='text'],
     [type='password'],
     [type='email'],
     [type='number'],
@@ -94,11 +92,9 @@ button:not(.link),
     [type='search'],
     [type='date'],
     [type='file'],
-    [type='color']
-  ),
+    [type='color']),
   select,
-  textarea
-) {
+  textarea) {
   max-width: 100%;
   padding: var(--spacing) var(--spacing-2);
   border: var(--border-width) solid var(--border-color);
@@ -145,11 +141,8 @@ button.link {
   border-radius: var(--radius-05);
   cursor: pointer;
   transition: color var(--transition);
-  user-select: none;
-  -webkit-user-select: none;
 
   &:hover {
-    /* text-decoration: underline; */
     color: color-mix(in srgb, var(--color), var(--fg1) 30%);
   }
 
