--- a/static/css/1-app/components.css
+++ b/static/css/1-app/components.css
@@ -57,12 +57,12 @@
         float: right;
         background-color: var(--bg2);
         color: var(--fg1);
-        box-shadow: var(--field-shadow);
+        box-shadow: var(--shadow);
         padding: var(--spacing) var(--spacing-2);
         border-radius: var(--radius);
       }
 
-      &[data-role='assistant'] + &[data-role='assistant'] {
+      &[data-role='assistant']+&[data-role='assistant'] {
         border-top: var(--border-width) solid var(--bg3);
         margin-top: var(--spacing-2);
         padding-top: var(--spacing-2);
@@ -169,7 +169,7 @@
       font-size: 2.3rem;
     }
 
-    h2 + p {
+    h2+p {
       color: var(--fg3);
     }
 
@@ -205,7 +205,7 @@
   background-color: var(--bg2);
   border-radius: var(--radius-2);
   padding: var(--spacing-05);
-  box-shadow: var(--field-shadow);
+  box-shadow: var(--shadow);
   border: var(--border-width) solid var(--border-color);
   margin-top: var(--spacing-05);
   width: 150px;
@@ -275,7 +275,7 @@
   border-radius: var(--radius);
   background-color: var(--bg2);
   color: var(--fg1);
-  box-shadow: var(--field-shadow);
+  box-shadow: var(--shadow);
   z-index: 1000;
   display: flex;
   align-items: center;
