--- a/static/css/1-app/dialog.css
+++ b/static/css/1-app/dialog.css
@@ -5,7 +5,7 @@ dialog {
   border-radius: var(--radius-2);
   padding: var(--spacing-2);
   background-color: var(--bg2);
-  box-shadow: var(--field-shadow);
+  box-shadow: var(--shadow);
   max-width: 400px;
   width: 90%;
   margin: auto;
