--- a/static/css/1-app/main.css
+++ b/static/css/1-app/main.css
@@ -42,7 +42,7 @@ main {
   display: flex;
   flex-direction: column;
   height: 100%;
-  box-shadow: inset var(--field-shadow);
+  box-shadow: inset var(--shadow);
   align-items: center;
 }
 
@@ -53,7 +53,8 @@ header {
   justify-content: space-between;
   padding: var(--spacing-05) var(--spacing-2);
   padding-bottom: 0;
-  border-bottom: 2px solid color-mix(in srgb, currentColor, transparent 80%);
+  border-bottom: var(--border-width) solid var(--border-color);
+  box-shadow: var(--shadow);
   width: 100%;
 
   .right {
